--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,79 @@
 /* You can add global styles to this file, and also import other style files */
+.loginreg-card{
+  width: 400px;
+  margin:  auto;
+  text-align: center;
+  margin-top: 100px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.3);
+}
+.card{
+  background-color: #f7f7f7;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+}
+.card-header{
+  margin-bottom: 30px;
+}
+.card-title{
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.form-field{
+  margin-bottom: 20px;
+}
+label{
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+input[type="email"],
+input[type="password"]{
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #f7f7f7;
+  box-sizing: border-box;
+  font-size: 15px;
+  color: #707070;
+  border: 1px solid #707070;
+}
+.loginreg-button{
+  background-color: #8245A5;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+.loginreg-button:hover:not(:disabled){
+  transform: scale(1.05);
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+}
+.loginreg-button:disabled {
+  background-color: #cccccc;
+  color: #999999;
+  cursor: not-allowed;
+}
+a{
+  font-size: 15px;
+  margin-top: 20px;
+  display:inline-block;
+  color: #707070;
+}
+.error {
+  border: 1px solid red;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;background-color: #e6e6fa; }
+
