--- a/src/app/components/weather-report/weather-report.component.html
+++ b/src/app/components/weather-report/weather-report.component.html
@@ -13,6 +13,7 @@
   <div class="container">
 
     <div class="left">
+      <img src="./assets/night-sky.jpg" alt="">
 
       <img src="./assets/night-sky.jpg" *ngIf="currentWeather && !isDaytime()">
       <img src="./assets/day-sky.avif" *ngIf="currentWeather && isDaytime()">
